- HKPG maxage changed to match HSTS.
- Changed SitemapService to return null if the index is out of range instead of throwing an exception.
- Changed HomeController to return a BadRequest response if the sitemap XML is null.
- Update Boilerplate.Web.Mvc5 to 1.0.14 which is just a name change to the NuGet package to 'MVC 5' instead of just 'MVC'.
MVC 6
- Gulp, Bower packages and build.
- About, Contact, Index, _Layout and _GlobalImports modified.
- FeedService added but only if you use full .NET and not DotNetCore.
- Changed SitemapService to return null if the index is out of range instead of throwing an exception.
- Changed HomeController to return a BadRequest response if the sitemap XML is null.
- Lots more...

Version 1.1.9
MVC 5
- Dropped support for IE 8 by removing the Respond.js library. IE 8 is used by 2.19% of global users, mostly in less
  developed countries and governments/businesses too lazy to upgrade from Windows XP.
	- Removed Respond.js NuGet package.
	- Removed Respond.js script bundle.
	- Removed Respond.js fail-over script.
	- Removed Respond.js from _Layout.cshtml.
- Added Font Awesome CDN from MaxCDN.com.

Version 1.1.8
MVC 5
- Updated NuGet packages:
	- Boilerplate.Web.Mvc5 updated to 1.0.12 - Added referrer meta tag.
- Added referrer meta tag to _Layout.cshtml to control privacy and security of the HTTP referrer header.
- Set the referrer mode and author in Index.cshtml, About.cshtml and Contact.cshtml.
- Added further comments and links about HPKP in Startup.cs to help set it up.
- HPKP no longer includes subdomains by default in Startup.cs.
- HSTS no longer includes subdomains by default in Startup.cs.
- Sample Copyright text fixed in FeedService.cs.

Version 1.1.7
MVC 5
- Updated NuGet packages:
	- Boilerplate.Web.Mvc5 updated to 1.0.10 - Assembly is now signed.
	- Newtonsoft.Json updated to 7.0.1
	- NWebsec updated to 4.1.1
	- NWebsec.Core updated to 1.4.1